# ArquiSoft_Tienda_de_Regalos

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  test-failover.sh
Tienda de Regalos /: docker-compose.yml
Tienda de Regalos /frontend/: app.js  index.html
Tienda de Regalos /order-service/: package-lock.json
Tienda de Regalos /product-service/: index.js
Tienda de Regalos /review-service/: main.py
TiendaDeRegalos /api-gateway/: index.js
TiendaDeRegalos /frontend/: carrito.html  (+1 more)
api-gateway/: index.js  package.json  rabbitmq.js  redis.js
auth-service/: CMakeLists.txt  Dockerfile
auth-service/databaseComponent/: init.sql
auth-service/serviceComponent/include/: crow_all.h_Zone.Identifier
auth-service/serviceComponent/src/: main.cpp
auth-service/serviceComponent/src/controllers/: authController.hpp
auth-service/serviceComponent/src/database/: database.hpp
auth-service/serviceComponent/src/models/: user.hpp
auth-service/serviceComponent/src/security/: hasher.hpp  tokenService.hpp
coordinator/: Dockerfile.coordinator  coordinator.js  package.json
frontend/: admin.html  app.js  carrito.js  producto.html  producto.js
frontend-ssr/: Dockerfile  package-lock.json  package.json  tailwind.config.js
k8s/: README-K8S-DEPLOYMENT.md  configmap.yaml  hpa.yaml  notification-deployment.yaml  notification-service.yaml
nginx/: nginx.conf
notification-service/: index.js  package.json
order-service/: index.js  package.json  rabbitmq.js
product-service/: index.js  package-lock.json
review-service/: main.py
(+40 files in other folders)
